@@ -33,9 +33,25 @@ public class BoardService {
 
     // 게시글 조회
     public List<BoardDto> getList() {
-        return boardRepository.findAll()
-                    .stream()
-                    .map(BoardDto::new)
-                    .collect(Collectors.toList());
+        // ACTIVE 상태인 사용자 리스트
+        List<User> activeUsers = userRepository.findByUserStatus(User.Status.ACTIVE);
+        // 해당 사용자들의 게시글 리스트
+        List<Board> boards = boardRepository.findByUserIn(activeUsers);
+        // 게시글을 DTO로 변환하여 반환
+        return boards
+                .stream()
+                .map(BoardDto::new)
+                .toList();
+    }
+
+    // 게시글 상세내용 조회
+    public BoardDto getBoard(Long boardId) {
+        Board board = boardRepository.findById(boardId)
+                .orElseThrow(() -> new RuntimeException("Post Not Found"));
+        User user = board.getUser();
+        if(user.getUserStatus() == User.Status.INACTIVE){
+            throw new RuntimeException("Deactivated User");
+        }
+        return new BoardDto(board);
     }
 }
